kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chai-kafe-service
  namespace: chaikafe
  labels:
    app: chai-kafe-app

spec:
  type: ClusterIP

  selector:
    app: chai-kafe-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
